Added coding instruction dialog and fixed some issue with test conduct

--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/conduct/test/test.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/conduct/test/test.html
@@ -44,7 +44,7 @@
           </div>
           <div class="display-table-cell ans-area code-snippet ptb20 pl15" *ngIf="isQuestionCodeSnippetType">
             <div class="pull-right">
-              <em class="material-icons programming-guide">help</em>
+              <em class="material-icons programming-guide" (click)="openProgramGuide()">help</em>
             </div>
             <div class="clearfix"></div>
             <div class="form-group display-inline-block mb30 mr20">
