--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/app.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/app.html
@@ -1,5 +1,5 @@
-﻿<div class="main-page" [class.test-preview]="isPageTestPreview">
-    <nav class="navbar navbar-default" >
+﻿<div class="main-page" [class.test-preview]="isPageTestPreview" >
+    <nav class="navbar navbar-default"  *ngIf="!disableHeader">
         <div class="container" >
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
