--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/conduct/test/test.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/conduct/test/test.html
@@ -98,7 +98,8 @@
             <div class="row">
               <div class="col-lg-6 col-md-6 col-sm-6">
                 <button type="button" class="btn" (click)="clearResponse(questionIndex)">Clear Response</button>
-                <button type="button" class="btn" (click)="markAsReview(questionIndex)">Mark for Review</button>
+                <button type="button" class="btn" (click)="markAsReview(questionIndex)" *ngIf="questionStatus !== 1">Mark for Review</button>
+                <button type="button" class="btn" (click)="markAsReview(questionIndex)" *ngIf="questionStatus === 1">Unmark from Review</button>
               </div>
               <div class="col-lg-6 col-md-6 col-sm-6 text-right">
                 <button type="button" class="btn" (click)="navigateToQuestionIndex(questionIndex-1)"><em class="material-icons">keyboard_arrow_left</em> Previous</button>
@@ -124,7 +125,8 @@
             <div class="row">
               <div class="col-lg-6 col-md-6 col-sm-6">
                 <button type="button" class="btn" (click)="clearResponse(questionIndex)">Clear Response</button>
-                <button type="button" class="btn" (click)="markAsReview(questionIndex)">Mark for Review</button>
+                <button type="button" class="btn" (click)="markAsReview(questionIndex)" *ngIf="questionStatus !== 1">Mark for Review</button>
+                <button type="button" class="btn" (click)="markAsReview(questionIndex)" *ngIf="questionStatus === 1">Unmark from Review</button>
               </div>
               <div class="col-lg-6 col-md-6 col-sm-6 text-right">
                 <button type="button" class="btn" (click)="navigateToQuestionIndex(questionIndex-1)" [disabled]="questionIndex === 0 || isCodeProcessing"><em class="material-icons">keyboard_arrow_left</em> Previous</button>
