--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/conduct/test-summary/test-summary.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/conduct/test-summary/test-summary.html
@@ -25,7 +25,7 @@
             <button type="button" class="btn" (click)="startTest()">Back to Test</button>
             <button type="button" class="btn btn-primary" (click)="endTestButtonClicked()">End Test</button>
         </div>
-        <div class="text-center" *ngIf="isTestClosedUnConditionally">
+        <!--<div class="text-center" *ngIf="isTestClosedUnConditionally">
             <h5 class="ptb20">Test once ended, cannot be resumed. Are you sure, you want to end your test?</h5>
             <button class="btn" *ngIf="!isAllowed" [disabled]="disableButton || testAttendee.report.isTestPausedUnWillingly" (click)="sendRequestForResume()">Request to Resume</button>
             <button type="button" class="btn" *ngIf="isAllowed" (click)="startTest()">Back to Test</button>
@@ -39,6 +39,24 @@
         <div class="text-center mt20" *ngIf="isTestClosedUnConditionally && testAttendee.report.isTestPausedUnWillingly">
             <div class="errors-container">
                 <span class="error-msg">Please refresh this page after the supervisor's instructions.</span>
+            </div>
+        </div>-->
+        <div class="text-center" *ngIf="isTestClosedUnConditionally && !isTestBlocked && !isTestExpired">
+            <h5 class="ptb20">Test once ended, cannot be resumed. Are you sure, you want to end your test?</h5>
+            <button class="btn" *ngIf="!isAllowed" [disabled]="disableButton || testAttendee.report.isTestPausedUnWillingly" (click)="sendRequestForResume()">Request to Resume</button>
+            <button type="button" class="btn" *ngIf="isAllowed" (click)="startTest()">Back to Test</button>
+            <button type="button" class="btn btn-primary" (click)="endYourTest()">End Test</button>
+            <br />
+            <div class="errors-container">
+                <span *ngIf="!isAllowed && !testAttendee.report.isTestPausedUnWillingly" class="error-msg mt20">Please contact the supervisor if you want to resume the test.</span>
+                <span *ngIf="testAttendee.report.isTestPausedUnWillingly" class="error-msg mt20">Please refresh this page after the supervisor's instructions.</span>
+            </div>
+        </div>
+        <div class="text-center" *ngIf="isTestBlocked || isTestExpired">
+            <h1>Your test is over.</h1>
+            <h5 class="mt10 mb20">Thank you for attending the test.</h5>
+            <div class="errors-container" *ngIf="isTestBlocked">
+                <span class="error-msg">Since you exceeded the limit of browser tolerance, your test has been ended.</span>
             </div>
         </div>
     </div>
