--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/test-settings/test-settings.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/test-settings/test-settings.html
@@ -33,13 +33,13 @@
                     <div class="form-group ip-restrictions">
                         <label>IP Restrictions</label>
                         <div class="ip-add-field" *ngFor="let ip of testDetails.testIpAddress; let i= index">
-                            <input type="text" class="form-control small-width" id="From" name="ip_{{i}}" placeholder="IP Address {{i+1}}" #From=ngModel [(ngModel)]="ip.ipAddress" pattern="^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])$" />
-                            <em class="material-icons" (click)="removeIpAddress(i,ip.id)">close</em>
+                            <input type="text" class="form-control small-width" id="From" name="ip_{{i}}" placeholder="IP Address {{i+1}}" (keyup)="IpAddressAdded(ip.ipAddress)" (focus)="IpAddressAdded(ip.ipAddress)" #From=ngModel [(ngModel)]="ip.ipAddress" pattern="^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])$" />
+                            <em class="material-icons" (click)="removeIpAddress(i,ip.id,ip.ipAddress)">close</em>
                             <div class="errors-container">
                                 <span class="error-msg" *ngIf="From.errors && From.dirty" [hidden]="!From.errors.pattern">Enter IP address in correct format.</span>
                             </div>
                         </div>
-                        <button md-mini-fab type="button" [disabled]="showIsPausedButton && !testDetails.isPaused" (click)="addIpFields()"><md-icon>add</md-icon></button>
+                        <button md-mini-fab type="button" [disabled]="showIsPausedButton && !testDetails.isPaused || !isIpAddressAdded" (click)="addIpFields()"><md-icon>add</md-icon></button>
                     </div>
                     <div class="form-group">
                         <label>Browser Tolerance</label>
@@ -113,7 +113,7 @@
                     </div>
 
                 </fieldset>
-                <create-test-footer [loader]="!loader" [showIsPausedButton]="showIsPausedButton" [isRelaunched]="isRelaunched" [testDetails]="testDetails" (saveTestSettings)="saveTestSettings(testDetails.id,testDetails)" (launchTestDialog)="launchTestDialog(testDetails.id,testDetails,$event)" (pauseTest)="pauseTest()" (resumeTest)="resumeTest()" [settingsForm]="settingsForm" [validStartDate]="validStartDate" [validEndDate]="validEndDate" [validTime]="validTime"></create-test-footer>
+                <create-test-footer [loader]="!loader" [showIsPausedButton]="showIsPausedButton" [isRelaunched]="isRelaunched" [testDetails]="testDetails" (saveTestSettings)="saveTestSettings(testDetails.id,testDetails)" (launchTestDialog)="launchTestDialog(testDetails.id,testDetails,$event)" (pauseTest)="pauseTest()" (resumeTest)="resumeTest()" [settingsForm]="settingsForm" [validStartDate]="validStartDate" [validEndDate]="validEndDate" [validTime]="validTime" [isIpAddressAdded]="isIpAddressAdded"></create-test-footer>
             </div>
         </div>
     </form>
