Updated instructions for unmark from review button

--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/conduct/instructions/instructions.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/conduct/instructions/instructions.html
@@ -28,6 +28,7 @@
             <li>You can navigate between questions from the pagination at the bottom or using the next and previous buttons.</li>
             <li><strong>Clear Response </strong>will clear your attempted answer of that particular selected question.</li>
             <li><strong>Mark for Review </strong>will mark that particular selected question for review so that if you want you can come back to that question and change your answer.</li>
+            <li><strong>Unmark from Review </strong>will appear for already marked for review question and clicking it will remove that question from review.</li>
             <li><strong>Finish Test </strong> will end your test.</li>
         </ul>
         <div class="text-center">
