--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/conduct/test-summary/test-summary.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/conduct/test-summary/test-summary.html
@@ -42,6 +42,7 @@
             <div class="errors-container" *ngIf="isTestBlocked">
                 <span class="error-msg">Since you exceeded the limit of browser tolerance, your test has been ended.</span>
             </div>
+        </div>
     </div>
     <test-conduct-footer></test-conduct-footer>
 </div>
